--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <section class="home">
         <div class="container">
-            <div class="row products">
+            <div class="products">
                 <div class="product_item mb-3">
                     <img src="img/oppo reno 7.jpg" alt="mobile image" class="product_item_img w-25 me-3 col-4">
                     <div class="col-8">
