--- a/cartproducts.html
+++ b/cartproducts.html
@@ -44,7 +44,7 @@
 
     <section class="home">
         <div class="container">
-            <div class="row">
+            <div>
                 <div class="products">
 
                 </div>
